@@ -38,9 +38,6 @@ import java.awt.event.KeyEvent;
 import java.text.NumberFormat;
 import java.text.ParseException;
 
-/*
- * IntegerEditor is used by TableFTFEditDemo.java.
- */
 import javax.swing.AbstractAction;
 import javax.swing.DefaultCellEditor;
 import javax.swing.JFormattedTextField;
@@ -51,6 +48,10 @@ import javax.swing.SwingConstants;
 import javax.swing.SwingUtilities;
 import javax.swing.text.DefaultFormatterFactory;
 import javax.swing.text.NumberFormatter;
+
+/*
+ * IntegerEditor is used by TableFTFEditDemo.java.
+ */
 
 /**
  * Implements a cell editor that uses a formatted text field
@@ -68,8 +69,8 @@ public class IntegerEditor extends DefaultCellEditor
 	{
 		super(new JFormattedTextField());
 		ftf = (JFormattedTextField) getComponent();
-		minimum = new Integer(min);
-		maximum = new Integer(max);
+		minimum = Integer.valueOf(min);
+		maximum = Integer.valueOf(max);
 
 		//Set up the editor for the integer cells.
 		integerFormat = NumberFormat.getIntegerInstance();
@@ -138,7 +139,7 @@ public class IntegerEditor extends DefaultCellEditor
 		}
 		else if (o instanceof Number)
 		{
-			return new Integer(((Number) o).intValue());
+			return Integer.valueOf(((Number) o).intValue());
 		}
 		else
 		{
